# dreamdisplays

./: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CONTRIBUTING.md
.github/workflows/: _build.yml  build.yml  release.yml
client/fabric/: build.gradle.kts
client/fabric/src/main/kotlin/com/dreamdisplays/: Client.kt
client/neoforge/: build.gradle.kts
common/: build.gradle.kts
common/src/main/java/com/dreamdisplays/: Initializer.java
common/src/main/java/com/dreamdisplays/ffmpeg/: FfmpegBinary.java
common/src/main/java/com/dreamdisplays/screen/: MediaPlayer.java  Screen.java
common/src/main/java/com/dreamdisplays/ytdlp/: Thumbnails.java  YtDlp.java
common/src/main/kotlin/com/dreamdisplays/: Initializer.kt
common/src/main/kotlin/com/dreamdisplays/api/: DefaultDisplayService.kt  DefaultPlaybackService.kt  DisplayRuntimeState.kt
common/src/main/kotlin/com/dreamdisplays/display/: DisplayManager.kt  DisplayScreen.kt  DisplaySettings.kt
fabric/: build.gradle.kts
fabric/src/main/kotlin/com/dreamdisplays/: Client.kt  Server.kt
fabric/src/main/resources/: fabric.mod.json
gradle/: libs.versions.toml
gradle/src/main/kotlin/: Chisel.kt  dreamdisplays.kotlin-conventions.gradle.kts
native/: Cargo.toml  README.md
native/lav/: Cargo.toml
native/src/: convert.rs  lib.rs  session.rs
native/tests/: bench_convert.rs  ffmpeg_pipe.rs
neoforge/: build.gradle.kts
paper/src/main/kotlin/com/dreamdisplays/: Config.kt  Main.kt
server/: build.gradle.kts
(+187 files in other folders)
