[package]
name = "dreamdisplays-lav"
version = "1.0.0"
edition = "2021"
authors = ["arsmotorin"]
description = "Optional in-process libav decode backend for Dream Displays."
license = "LGPL-3.0"

[lib]
name = "dreamdisplays_lav"
crate-type = ["cdylib", "lib"]

[dependencies]
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }
